<resources>
    <string name="app_name">Vacation Cruise</string>
    <string name="title_activity_basics">Basics</string>
    <string name="title_activity_maps">Map</string>
    <string name="Pager_Desc">Group of companies have their own <br />
            Investment field in information <br />
            technology , production.</string>

    <string name="Pager_Desc2">Mobile application , Website , Digital \n
    content , Plus trade electronic , Networking <br />
    Software , Marketing <br />
    And internet services .
    </string>

    <string name="Pager_title">GMS GROUP</string>

    <string name="BASE_URL">app.digitalsigma.io/api</string>


    <string name="profile">Cruise Info</string>
    <string name="all_user">Book Now</string>
    <string name="gallery">Gallery</string>

    <!--booking form-->
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email</string>
    <string name="nationality">Nationality</string>
    <string name="persons">Persons Number</string>
    <string name="rooms">Rooms Number</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="note">Note..</string>

</resources>
