<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!--name-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/name"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/Form_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="@android:color/darker_gray"
                        android:hint="Type here..."
                        android:textSize="15sp" />
                </LinearLayout>

                <!--phone-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/phone"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">
                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccpNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:ccp_countryPreference="eg,us"
                        app:ccp_defaultNameCode="eg"

                        />
                    <EditText
                        android:id="@+id/Form_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:backgroundTint="@android:color/darker_gray"
                        android:hint="Type Phone here..."
                        android:singleLine="true"
                        android:editable="false"
                        android:textSize="15sp" />
                    </LinearLayout>

                </LinearLayout>

                <!--email-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/email"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/Form_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="@android:color/darker_gray"
                        android:hint="Type here..."
                        android:textSize="15sp" />
                </LinearLayout>

                <!--nationality-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/nationality"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/Form_nationality"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="@android:color/darker_gray"
                        android:hint="Type here..."
                        android:textSize="15sp"
                        android:visibility="gone"/>
                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ccp_showFullName="true"
                        app:ccp_showPhoneCode="false"
                        app:ccp_showNameCode="false"
                        app:ccp_textGravity="LEFT"
                        app:ccp_countryPreference="eg,us"
                        app:ccp_defaultNameCode="eg"
                        />

                </LinearLayout>

                <!--persons-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/persons"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/Form_persons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="10dp"
                        android:inputType="number"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="@android:color/darker_gray"
                        android:hint="Type here..."
                        android:textSize="15sp" />
                </LinearLayout>

                <!--Rooms-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/rooms"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/FOrm_rooms"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:inputType="number"
                        android:backgroundTint="@android:color/darker_gray"
                        android:hint="Type here..."
                        android:textSize="15sp" />
                </LinearLayout>

                <!--startDate-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/start_date"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/Form_Start_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="@android:color/darker_gray"
                        android:hint="mm/dd/yy"
                        android:clickable="true"
                        android:editable="false"
                        android:focusable="false"
                        android:textSize="15sp"
                         />
                </LinearLayout>

                <!--endDate-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/end_date"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/Form_End_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="@android:color/darker_gray"
                        android:hint="mm/dd/yy"
                        android:clickable="true"
                        android:editable="false"
                        android:focusable="false"
                        android:textSize="15sp" />
                </LinearLayout>

                <!--Note-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:text="Special Request (Optional)"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/Form_specialRequest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="@android:color/darker_gray"
                        android:hint="Type here..."
                        android:textSize="15sp" />
                </LinearLayout>

                <!--submit btn-->
                <TextView
                    android:id="@+id/booking_submit"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@color/textTabBright"
                    android:gravity="center"
                    android:text="Submit"
                    android:textColor="@color/textTabLight"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>